// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO dsKwOn sc-ZWpEZ ktTXKI sc-kmYIZz kseWHg"
    >
      <h3
        class="sc-gXvQxy hKQgRw sc-cBEiUn eEmtjQ"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO dsKwOn sc-ZWpEZ gqvZXX sc-kmYIZz kseWHg"
    >
      <h3
        class="sc-gXvQxy hKQgRw sc-cBEiUn eEmtjQ"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
